--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "example": "example"
   },
   "scripts": {
+    "start": "parcel ./demo/**/*.html -d ./demo/build",
     "test": "jest"
   },
   "repository": {
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/varcat/rem#readme",
   "devDependencies": {
     "@types/jest": "^23.3.0",
+    "@types/node": "^10.5.3",
     "jest": "^23.4.1"
   },
   "browserslist": [
